Add base box to design

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="src/output.css">
 </head>
-<body>
-    <h1 class="text-3xl font-bold underline">    Hello world!  </h1>
+<body class="bg-[#E0F1E7] flex justify-center">
+    <div class="flex bg-white rounded-md max-w-md min-w-sm shrink-0 justify-center">Test</div>
 </body>
 </html>
