--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="src/output.css">
 </head>
 <body class="bg-[#E0F1E7] flex justify-center">
-    <div class="flex bg-white rounded-md max-w-md min-w-sm shrink-0 justify-center">Test</div>
+    <div class="flex bg-white rounded-lg min-w-sm shrink-0 justify-center p-8 mt-32">
+        <form class="grid grid-cols-2 gap-4">
+            <label class="font-bold text-3xl col-span-2">Contact Us</label>
+            
+            <label class="text-sm" for="first-name">First Name<span class="text-[#658c7f] after:content-['*'] pl-2"></span></label>
+            <label class="text-sm" for="last-name">Last Name<span class="text-[#658c7f] after:content-['*'] pl-2"></span></label>
+            <input id="first-name" type="input" class="h-10 rounded-md border border-gray-400 w-3xs" required>
+            <input id="last-name" type="input" class="h-10 rounded-md border border-gray-400 w-3xs" required>
+        </form>
+    </div>
 </body>
 </html>
