--- a/index.html
+++ b/index.html
@@ -7,14 +7,37 @@
     <link rel="stylesheet" href="src/output.css">
 </head>
 <body class="bg-[#E0F1E7] flex justify-center">
-    <div class="flex bg-white rounded-lg min-w-sm shrink-0 justify-center p-8 mt-32">
-        <form class="grid grid-cols-2 gap-4">
-            <label class="font-bold text-3xl col-span-2">Contact Us</label>
+    <div class="flex bg-white rounded-lg shrink-0 justify-center p-8 mt-32">
+        <form class="grid grid-cols-2 gap-y-6 gap-x-4">
+            <label class="font-bold text-3xl col-span-2 text-gray-700">Contact Us</label>
             
-            <label class="text-sm" for="first-name">First Name<span class="text-[#658c7f] after:content-['*'] pl-2"></span></label>
-            <label class="text-sm" for="last-name">Last Name<span class="text-[#658c7f] after:content-['*'] pl-2"></span></label>
-            <input id="first-name" type="input" class="h-10 rounded-md border border-gray-400 w-3xs" required>
-            <input id="last-name" type="input" class="h-10 rounded-md border border-gray-400 w-3xs" required>
+            <label class="text-sm -mb-4 text-gray-700" for="first-name">First Name<span class="text-[#658c7f] after:content-['*'] pl-2"></span></label>
+            <label class="text-sm -mb-4 text-gray-700" for="last-name">Last Name<span class="text-[#658c7f] after:content-['*'] pl-2"></span></label>
+            <input id="first-name" type="input" class="h-10 rounded-md border border-gray-400 min-w-xs" required>
+            <input id="last-name" type="input" class="h-10 rounded-md border border-gray-400" required>
+
+            <label class="text-sm -mb-4 text-gray-700" for="email-address">Email Address<span class="text-[#658c7f] after:content-['*'] pl-2 col-span-2"></span></label>
+            <input id="email-address" type="input" class="h-10 rounded-md border border-gray-400 col-span-2" required>
+
+            <label class="text-sm col-span-2 -mb-4 text-gray-700">Query Type<span class="text-[#658c7f] after:content-['*'] pl-2"></span></label>
+            <div class="border px-6 py-2 border-gray-400 rounded-md">
+                <input id="general-inquiry" name="query-type" type="radio" class="" required>
+                <label for="query-type" class="text-gray-700">General Inquiry</label>
+            </div>
+            <div class="px-6 py-2 border border-gray-400 rounded-md">
+                <input id="support-request" name="query-type" type="radio" class="" required>
+                <label for="query-type" class="text-gray-700">Support Request</label>
+            </div>
+
+            <label class="text-sm col-span-2 -mb-4 text-gray-700">Message<span class="text-[#658c7f] after:content-['*'] pl-2"></span></label>
+            <textarea id="message-box" class="border border-gray-400 rounded-md col-span-2 min-h-20" required></textarea>
+
+            <div class="col-span-2">
+                <input type="checkbox" id="consent-box" class="mr-3">
+                <label class="text-gray-700">I consent to being contacted by the team.<span class="text-[#658c7f] after:content-['*'] pl-2"></span></label>
+            </div>
+
+            <input type="submit" class="bg-[#0c7d69] rounded-lg border text-white font-bold col-span-2 h-14">
         </form>
     </div>
 </body>
