Update responsive design

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="src/output.css">
 </head>
 <body class="bg-[#E0F1E7] flex justify-center">
-    <div class="flex bg-white rounded-lg shrink-0 justify-center p-8 mt-32">
-        <form class="grid grid-cols-2 gap-y-6 gap-x-4">
+    <div class="flex bg-white rounded-lg justify-center p-8 mt-32 min-w-xs">
+        <form class="grid grid-cols-2 gap-y-6 gap-x-4 w-xl">
             <label class="font-bold text-3xl col-span-2 text-gray-700">Contact Us</label>
             
             <label class="text-sm -mb-4 text-gray-700" for="first-name">First Name<span class="text-[#658c7f] after:content-['*'] pl-2"></span></label>
             <label class="text-sm -mb-4 text-gray-700" for="last-name">Last Name<span class="text-[#658c7f] after:content-['*'] pl-2"></span></label>
-            <input id="first-name" type="input" class="h-10 rounded-md border border-gray-400 min-w-xs" required>
+            <input id="first-name" type="input" class="h-10 rounded-md border border-gray-400" required>
             <input id="last-name" type="input" class="h-10 rounded-md border border-gray-400" required>
 
             <label class="text-sm -mb-4 text-gray-700" for="email-address">Email Address<span class="text-[#658c7f] after:content-['*'] pl-2 col-span-2"></span></label>
